--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -46,9 +46,9 @@ header div img {
 }
 
 #dateTime {
-    /* grid-row: 2/3; */
     grid-column: 1/-1;
     margin: auto auto;
+    color: #F8F8FF;
 }
 
 h1 {
