--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,5 +1,12 @@
 /*35rem is also 560px when basefont is 16px */
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 70rem) {
+    header,
+    main,
+    footer {
+    max-width: 1000px;
+    margin: 0 auto;
+    }
+    
     nav ul li a { 
         padding: .5rem 1rem;
     }
