--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -43,6 +43,7 @@ header div {
 
 header div img {
     max-width: 32px;
+    border-radius: 5px;
 }
 
 #dateTime {
@@ -169,3 +170,52 @@ footer p {
     max-width: 70px;
     border-radius: 50%;
 }
+
+#hero {
+    margin: 10px 5px;
+	position: relative;
+    padding: 0;
+    border: none;
+    background-color: white;
+}
+#hero picture img {
+    max-width: 100%;
+    height: 100%;
+}
+#hero h2 {
+    position: absolute;
+    left: 1rem;
+    font-size: 2.5em;
+}
+.join-us {
+	position: absolute;
+	bottom: 2em;
+	right: 3em;
+}
+.join-us,
+.meeting {
+	background: radial-gradient(#eee, #4567aa);
+	border: 1px solid rgba(0,0,0,.1);
+	padding: 1.5rem;
+	box-shadow: 0 0 30px #333;
+	opacity: 0.8;
+    width: 40%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+}
+.join-us span {
+	font-style: italic;
+	font-weight: 700;
+}
+.meeting {
+    position: absolute;
+    top: 2em;
+    right: 2em;
+}
+
+
+.meeting.closed {display: none;}
+/*.meeting.closed span:nth-child(2) {display: block;}*/
