--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,4 +1,4 @@
-/*35rem is also 560px when basefont is 16px */
+/*70rem is also 1120px when basefont is 16px */
 @media only screen and (min-width: 70rem) {
     header,
     main,
@@ -17,11 +17,13 @@
     }
     #hero {
         grid-column: 2/3;
-        grid-row: 1/3;
+        grid-row: 1/2;
+        align-self: center;
     }
     #news {
-        grid-column: 2/-3;
-        grid-row: 3/4;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        max-width: fit-content;
     }
     #spotlight3 {display: block;}
     #spotlights {
@@ -38,10 +40,18 @@
     #weather {
         grid-column: 1/2;
         grid-row: 2/3;
+        justify-items: start;
+    }
+    #weather input {
+        max-width: 50%;
     }
     #join {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 3/4;
-
+        max-width: fit-content
     }
+    .info {
+        max-width: 250px;
+    }
+
     }/* End Medium */
