--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -21,7 +21,9 @@
         display: grid;
         grid-template-columns: auto auto;
     }
-
+    main div {
+        padding: 0;
+    }
    
 
     #hero {
@@ -51,5 +53,70 @@
         grid-row: 5/6;
     }
     
+    #discover-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+
+    #discover-container picture {
+        grid-column: 1/3;
+        grid-row: 1/3;
+        max-width: 100%;
+        position: relative;
+        text-align: center;
+        color: white;
+    }
+    #discover-container h2 {
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        background-color: rgba(255, 255, 255, .7);
+        position: absolute;
+        top: 20%;
+        left: 35%;
+        transform: translate(-50%, -50%);
+        font-size: 3em;
+        padding: 0 .3em;
+        border-radius: 10px;
+        text-align: left;
+    }
+    
+    .demo-info {
+    padding: .5em;
+    }
+    #club-div{ 
+        grid-row: 3/4;
+        background-color: white;
+        border: 10px solid rgba(0,0,0, .5);
+        border-radius: 10px;
+    }
+    #country_club {
+        
+        box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+        margin: 10px 0 10px 0;
+    }
+    
+    #info2 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    #forest{
+        grid-column: 1/-1;
+        max-width: 100%;
+    }
+    #treehouse {
+        grid-row: 6/7;
+        grid-column: 2/3;
+        margin: 0 0 10px 0;
+        border-radius: 5px;
+        box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+
+    }
+    #stables {
+        grid-row: 5/7;
+        border-radius: 5px;
+        
+    }
 
     } /* end medium 
