--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,13 @@
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-appearance: none;}
+
+:root {
+    --main-color: #F8F8FF;
+    --header-footer-color: #494B5B;
+    --nav-color: #6CD4FF; 
+
+}
+
 
 * { 
     -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
@@ -9,7 +17,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 body {
     font-size: 16px;
-    background-color: #F8F8FF;
+    background-color: var(--main-color);
 }
 
 img {
@@ -24,7 +32,7 @@ header {
 
 header,
 footer {
-    background-color: #494B5B;
+    background-color: var(--header-footer-color);
     align-items: center;
     justify-content: center;
     padding: .75rem;
@@ -49,12 +57,12 @@ header div img {
 #dateTime {
     grid-column: 1/-1;
     margin: auto auto;
-    color: #F8F8FF;
+    color: var(--main-color);
 }
 
 h1 {
     font-size: 2rem;
-    color: #F8F8FF;
+    color: var(--main-color);
 }
 h2 {
     color: #536878
@@ -74,7 +82,7 @@ nav button {
 }
 
 nav {
-    background-color: #6CD4FF;
+    background-color: var(--nav-color);
     margin: 0 auto 0 0;
     max-width: 780px;
     box-shadow: 0 0 030px rgba(0,0,0,0.9);
@@ -82,7 +90,7 @@ nav {
 
 nav a {
     display: flex;
-    color: #494B5B;
+    color: var(--main-color);
     text-align: center;
     padding: 0.75rem;
     text-decoration: none;
@@ -146,7 +154,7 @@ main div {
 }
 #spotlights div {
     border: 3px solid rgba(0,0,0, .5);
-    background-color: #f8f8ff;
+    background-color: var(--main-color);
 }
 
 footer {
@@ -280,4 +288,128 @@ img.clear {
 }
 #info2, #info3 {
     padding: .7em;
+}
+
+/* Form */
+main #form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+form fieldset {
+    margin: 2rem .5rem;
+    border: 2px solid var(--nav-color) ;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+
+form legend {
+    color: var(--main-color);
+    background-color: var(--header-footer-color);
+    border-radius: 5px;
+    margin: .5rem 1rem;
+    padding: 0 .5rem;
+    font-size: 1.5rem;
+}
+
+form label.top, form div {
+    display: block;
+    padding-top: 1rem;
+    color: var(--header-footer-color);
+    font-size: 1.5rem;
+}
+form label.top input, form label.top textarea, form label.top select {
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1)
+}
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+}
+form input.submitBtn {
+    border: none;
+    background-color: var(--nav-color);
+    color: var(--header-footer-color);
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+form label.top input:required {
+    border-left: red solid 6px;
+}
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+  
+.membershipTier {
+    /* border: linear-gradient(135deg, rgba(255,255,255,1) 5%, rgba(0, 0, 0, 0.4) 75%)  solid 5px; */
+    border-radius: 10px;
+    padding: .5rem;
+    grid-column: 2/3;
+}
+
+.membershipTier h3 {
+    margin: 5px 0 0 0; 
+    padding: 0;
+}
+
+.membershipTier ul {
+    margin-top: -.5%;
+    
+}
+
+.membershipTier ul li {
+    list-style: none;
+    
+}
+#nbMembership {
+    background: rgb(255,255,255);
+    background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(18,121,233,.7) 75%);
+}
+
+#bronzeMembership {
+    background: rgb(255,255,255);
+    background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(205,127,50,.7) 75%);
+    
+}
+#silverMembership {
+    background: rgb(255,255,255);
+    background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(192,192,192,.7) 75%);
+}
+#goldMembership {
+    background: rgb(255,255,255);
+    background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(251,214,13,.7) 75%);
+}
+#timeLoaded {
+    display: none;
+}
+
+
+
+/* Thank you page */
+#thankyouPage {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#thankyouPage div {
+    border-radius: 10px;
+    width: 100%;
+
+}
+#thankyouPage h1 {
+    margin: 5px;
+}
+#thankyouPage p {
+    padding: 2rem 2rem 60% 1rem;
 }
