--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,7 +5,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-appear
     --main-color: #F8F8FF;
     --header-footer-color: #494B5B;
     --nav-color: #6CD4FF; 
-
+    --white-background: rgb(255, 255, 255)
 }
 
 
@@ -149,6 +149,7 @@ main div {
     background-color: #85ACC1;
     padding: 0.75rem;
     border: 10px solid rgba(0,0,0, .5);
+    border-radius: 10px;
     margin: 5px;
 
 }
@@ -373,21 +374,21 @@ form label.top input:required:valid {
     
 }
 #nbMembership {
-    background: rgb(255,255,255);
+    background: var(--white-background);
     background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(18,121,233,.7) 75%);
 }
 
 #bronzeMembership {
-    background: rgb(255,255,255);
+    background: var(--white-background);
     background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(205,127,50,.7) 75%);
     
 }
 #silverMembership {
-    background: rgb(255,255,255);
+    background: var(--white-background);
     background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(192,192,192,.7) 75%);
 }
 #goldMembership {
-    background: rgb(255,255,255);
+    background: var(--white-background);
     background: linear-gradient(135deg, rgba(255,255,255,0) 5%, rgba(251,214,13,.7) 75%);
 }
 #timeLoaded {
@@ -413,3 +414,69 @@ form label.top input:required:valid {
 #thankyouPage p {
     padding: 2rem 2rem 60% 1rem;
 }
+
+/* Directoery*/
+main.directory {
+    display: flex;
+    align-items: flex-start;
+}
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	    align-items: end;
+    justify-items: center;
+}
+main.directory button {
+    background-color: #85ACC1;
+    padding: 0.75rem;
+    border: 5px solid rgba(0,0,0, .5);
+    border-radius: 10px;
+    margin: 5px;
+}
+section.grid section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+section.grid img {
+    max-width: 100%;
+    z-index: -1;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+}
+section.grid p {
+    margin: 5px;
+    font-size: 1.3rem;
+}
+section.list section img {
+    display: none;
+}
+/*
+section.grid {
+    margin: 5px;
+    position: relative;
+}
+section.grid h2,
+section.grid div {
+    position: absolute;
+    left: 10px;
+    background-color: rgba(255, 255, 255, .4);
+    padding: 5px 10px;
+    border-radius: 10px;
+    
+
+}
+section.grid h2{
+    top: -10px;
+    
+}
+section.grid div {
+    display: block;
+    z-index: 1;
+    bottom: 20px;
+    font-size: 1rem;
+    
+}
+
+
+*/
