--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -3,9 +3,12 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-appear
 
 :root {
     --main-color: #F8F8FF;
-    --header-footer-color: #494B5B;
-    --nav-color: #6CD4FF; 
-    --white-background: rgb(255, 255, 255)
+    --primary-blue: #6CD4FF;
+    --dark-blue: #85ACC1;
+    --dark-gray: #494B5B;
+    --alt-orange: #A15E5E;
+    --primary-orange: #f87060;
+    
 }
 
 
@@ -13,6 +16,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-appear
     -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
     padding: 0;
 	box-sizing: border-box; 
+    border-radius: 5px;
 }
 
 body {
@@ -32,16 +36,15 @@ header {
 
 header,
 footer {
-    background-color: var(--header-footer-color);
+    background-color: var(--primary-blue);
     align-items: center;
     justify-content: center;
     padding: .75rem;
-    /*border: 1px solid rgba(248, 112, 96, 0.2);*/
 }
 header,
 main,
 footer {
-    max-width: 767px;
+    max-width: 1120px;
     margin: 0 auto;
 }
 header div {
@@ -51,7 +54,6 @@ header div {
 
 header div img {
     max-width: 32px;
-    border-radius: 5px;
 }
 
 #dateTime {
@@ -82,20 +84,15 @@ nav button {
 }
 
 nav {
-    background-color: var(--nav-color);
+    background-color: var(--main-color);
     margin: 0 auto 0 0;
     max-width: 780px;
-    box-shadow: 0 0 030px rgba(0,0,0,0.9);
+    box-shadow: 0 0 3px rgba(0,0,0,0.1);
 }
 
 nav a {
-    display: flex;
-    color: var(--main-color);
     text-align: center;
-    padding: 0.75rem;
-    text-decoration: none;
     justify-content: center;
-    font-size: 0.95rem;
     background: linear-gradient(90deg, transparent, #F87060, transparent) bottom
     /
         var(--d, 0) 3px no-repeat;
@@ -146,16 +143,18 @@ main {
 }
 
 main div {
-    background-color: #85ACC1;
+    background-color: var(--main-color);
     padding: 0.75rem;
-    border: 10px solid rgba(0,0,0, .5);
+    border-top: 3px ridge var(--primary-orange);
+    border-bottom: 3px ridge var(--primary-orange);
     border-radius: 10px;
     margin: 5px;
-
 }
 #spotlights div {
-    border: 3px solid rgba(0,0,0, .5);
-    background-color: var(--main-color);
+    border: none;
+    border-left: 3px solid rgba(0,0,0, .2);
+    border-right: 3px solid rgba(0,0,0, .2);
+    
 }
 
 footer {
@@ -299,14 +298,14 @@ main #form {
 }
 form fieldset {
     margin: 2rem .5rem;
-    border: 2px solid var(--nav-color) ;
+    border: 2px solid var(--primary-blue) ;
     border-radius: 10px;
     padding: .5rem 2%;
 }
 
 form legend {
     color: var(--main-color);
-    background-color: var(--header-footer-color);
+    background-color: var(--dark-gray);
     border-radius: 5px;
     margin: .5rem 1rem;
     padding: 0 .5rem;
@@ -316,7 +315,7 @@ form legend {
 form label.top, form div {
     display: block;
     padding-top: 1rem;
-    color: var(--header-footer-color);
+    color: var(--dark-gray);
     font-size: 1.5rem;
 }
 form label.top input, form label.top textarea, form label.top select {
@@ -337,8 +336,8 @@ form label.sbs {
 }
 form input.submitBtn {
     border: none;
-    background-color: var(--nav-color);
-    color: var(--header-footer-color);
+    background-color: var(--primary-blue);
+    color: var(--dark-gray);
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     margin: 0 0 2rem 2%;
@@ -423,7 +422,7 @@ main.directory {
 .grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	    align-items: end;
+	align-items: end;
     justify-items: center;
 }
 main.directory button {
