--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -143,7 +143,7 @@ main {
 }
 
 main div {
-    background-color: var(--main-color);
+    background-color: rgba(248, 112, 96, .05);
     padding: 0.75rem;
     border-top: 3px ridge var(--primary-orange);
     border-bottom: 3px ridge var(--primary-orange);
