--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,31 +1,39 @@
 /*70rem is also 1120px when basefont is 16px */
 @media only screen and (min-width: 70rem) {
+
     header,
     main,
     footer {
-    max-width: 1000px;
-    margin: 0 auto;
+        max-width: 1000px;
+        margin: 0 auto;
     }
-    
-    nav ul li a { 
+
+    nav ul li a {
         padding: .5rem 1rem;
     }
+
     main {
         display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
     }
+
     #hero {
         grid-column: 2/3;
         grid-row: 1/2;
         align-self: center;
     }
+
     #news {
         grid-column: 2/3;
         grid-row: 2/3;
         max-width: fit-content;
     }
-    #spotlight3 {display: block;}
+
+    #spotlight3 {
+        display: block;
+    }
+
     #spotlights {
         grid-column: 3/4;
         grid-row: 1/-1;
@@ -33,29 +41,37 @@
         flex-direction: column;
 
     }
+
     #events {
         grid-column: 1/2;
         grid-row: 1/2;
     }
+
     #weather {
         grid-column: 1/2;
         grid-row: 2/3;
         justify-items: start;
     }
+
     #weather input {
         max-width: 50%;
     }
+
     #join {
         grid-column: 1/3;
         grid-row: 3/4;
         max-width: fit-content
     }
+
     .info {
         max-width: 250px;
     }
+
     .meeting p {
         padding: 0;
         font-size: .8em;
     }
 
-    }/* Ends Large */
+}
+
+/* Ends Large */
