--- a/final_project/styles/large.css
+++ b/final_project/styles/large.css
@@ -1,14 +1,56 @@
 /*70rem is also 1120px when basefont is 16px */
 @media only screen and (min-width: 70rem) {
 
+    :root {
+        --main-color: #F2E8CF;
+        --primary-nav: #386641;
+        --main-red: #BC4749;
+        --mid-green: #6A994E;
+        --off-white: #FAF9F6;
+    }
+    
     header,
     main,
     footer {
         max-width: 1000px;
         margin: 0 auto;
     }
+    header {
+        grid-gap: 1rem 50%;
+        grid-template-columns: auto auto;
+    }
+    nav {
+        grid-row: 1/-1;
+    }
 
     nav ul li a {
         padding: .5rem 1rem;
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+    main h2 {
+        grid-column: 1/-1;
+    }
+    #drinks {
+        grid-row: 3/4;
+    }
+    #fresh {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    #fruit-options {
+        grid-column: 2/3;
+        grid-row: 1/-1;
+    }
+    #shopping-cart {
+        background-color: var(--main-color);
+        
+    }
+    #special {
+        max-height: 25rem;
     }
 }
