--- a/final_project/styles/small.css
+++ b/final_project/styles/small.css
@@ -39,7 +39,9 @@ header {
     grid-template-columns: auto auto auto auto auto;
     grid-template-rows: auto auto;
 }
-
+.logo{
+    max-width: 60px;
+}
 header,
 footer {
     background-color: var(--primary-nav);
@@ -66,6 +68,7 @@ header div img {
 
 #dateTime {
     grid-column: 1/-1;
+    grid-row: 3/4;
     margin: auto auto;
     color: var(--main-color);
 }
