--- a/final_project/styles/small.css
+++ b/final_project/styles/small.css
@@ -66,6 +66,8 @@ header div img {
     max-width: 32px;
 }
 
+
+
 #dateTime {
     grid-column: 1/-1;
     grid-row: 3/4;
@@ -92,7 +94,6 @@ p {
 }
 
 ul li {
-    margin: 0 2rem ;
     list-style-type: none
 }
 
@@ -115,7 +116,7 @@ nav {
 nav a {
     text-align: center;
     justify-content: center;
-    transition: .7s;
+    transition: .4s;
 }
 
 nav ul {
@@ -317,4 +318,8 @@ section.cards h2 {
 #map {
     max-width: 100%;
     margin: 5px;
+}
+#about-us {
+    display: flex;
+    flex-direction: column;
 }
